--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/defaults/main.yml
@@ -137,7 +137,7 @@ postgresql_databases_users:
     lc_ctype: "{{ xray_db_lc_ctype | d(postgresql_locale) }}"
     encoding: "{{ xray_db_encoding | d('UTF-8') }}"
     template: "{{ xray_db_template | d('template0') }}"
-    login_host: "{{ xray_db_login_host | d(null) }}"
+    login_host: "{{ xray_db_login_host | d('localhost') }}"
     login_port: "{{ xray_db_login_port | d(null) }}"
     login_user: "{{ xray_db_login_user | d(postgresql_user) }}"
     login_password: "{{ xray_db_login_password | d(null) }}"
@@ -161,7 +161,7 @@ postgresql_databases_users:
     lc_ctype: "{{ distribution_db_lc_ctype | d(postgresql_locale) }}"
     encoding: "{{ distribution_db_encoding | d('UTF-8') }}"
     template: "{{ distribution_db_template | d('template0') }}"
-    login_host: "{{ distribution_db_login_host | d(null) }}"
+    login_host: "{{ distribution_db_login_host | d('localhost') }}"
     login_port: "{{ distribution_db_login_port | d(null) }}"
     login_user: "{{ distribution_db_login_user | d(postgresql_user) }}"
     login_password: "{{ distribution_db_login_password | d(null) }}"
@@ -185,7 +185,7 @@ postgresql_databases_users:
     lc_ctype: "{{ insight_db_lc_ctype | d(postgresql_locale) }}"
     encoding: "{{ insight_db_encoding | d('UTF-8') }}"
     template: "{{ insight_db_template | d('template0') }}"
-    login_host: "{{ insight_db_login_host | d(null) }}"
+    login_host: "{{ insight_db_login_host | d('localhost') }}"
     login_port: "{{ insight_db_login_port | d(null) }}"
     login_user: "{{ insight_db_login_user | d(postgresql_user) }}"
     login_password: "{{ insight_db_login_password | d(null) }}"
