--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/meta/main.yml
@@ -6,18 +6,19 @@ galaxy_info:
   description: "The artifactory role installs the Artifactory Pro software onto the host."
   company: JFrog
   issue_tracker_url: "https://github.com/jfrog/JFrog-Cloud-Installers/issues"
-  license: license (Apache-2.0)
+  license: 'license (Apache-2.0)'
   min_ansible_version: '2.9'
   platforms:
     - name: EL
       versions:
-        - 8
-        - 9
+        - '8'
+        - '9'
     - name: Ubuntu
       versions:
         - bionic
         - focal
         - jammy
+        - noble
     - name: Debian
       versions:
         - buster
