--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/meta/main.yml
@@ -6,13 +6,13 @@ galaxy_info:
   description: "This role installs NGINX for artifactory. This role is automatically called by the artifactory role and isn't intended to be used separately."
   company: JFrog
   issue_tracker_url: "https://github.com/jfrog/JFrog-Cloud-Installers/issues"
-  license: license (Apache-2.0)
+  license: 'license (Apache-2.0)'
   min_ansible_version: '2.9'
   platforms:
     - name: EL
       versions:
-        - 8
-        - 9
+        - '8'
+        - '9'
     - name: Ubuntu
       versions:
         - bionic
